@@ -42,7 +42,7 @@ JAUTHOR="Author"
 JCANCEL="Cancel"
 JCATEGORY="Category"
 JCLEAR="Clear"
-JCLIENT="Client"
+JCLIENT="Location"
 JCONFIG_PERMISSIONS_DESC="Default permissions used for all content in this component."
 JCONFIG_PERMISSIONS_LABEL="Permissions"
 JCURRENT="Current"
@@ -289,6 +289,7 @@ JGLOBAL_FIELD_ID_LABEL="ID"
 JGLOBAL_FIELD_ID_DESC="Record number in the database"
 JGLOBAL_FILTER_ATTRIBUTES_DESC="List additional attributes, separating each attribute name with a space or comma."
 JGLOBAL_FILTER_ATTRIBUTES_LABEL="Filter Attributes"
+JGLOBAL_FILTER_CLIENT="- Select Location -"
 JGLOBAL_FILTER_FIELD_DESC="Whether to show a Filter field for the list of articles. Select Hide to hide the filter field, or select which field you wish to filter on."
 JGLOBAL_FILTER_FIELD_LABEL="Filter Field"
 JGLOBAL_FILTER_GROUPS_DESC="This sets the user groups that you want filters applied to. Other groups will have no filtering performed."
